--- a/css/base/common.css
+++ b/css/base/common.css
@@ -7,7 +7,7 @@
 .hidden{display: block; overflow: hidden; position: absolute; z-index: -1; width: 0; height: 0;}
 .hidden_wrap a{display:block; width:100%; height:100%;}
 
-.backimg{background-repeat: no-repeat; background-position: center; background-size: cover;}
+.backimg{background-repeat: no-repeat; background-position: center; -webkit-background-size: cover;background-size: cover;}
 
 #wrap ul>.first,
 #wrap ol>.first{margin-left:0; border-left:0;}
