--- a/css/src/mypage.css
+++ b/css/src/mypage.css
@@ -39,7 +39,7 @@ body,html{width: 100%; height: 100%;}
 .indicator_wrap{
   position: absolute;
   z-index: 9999;
-  width: 190px;
+  width: 150px;
   height: 30px;
   bottom: 10%;
   left: 5%;
@@ -132,20 +132,17 @@ body,html{width: 100%; height: 100%;}
 }
 .slide_wrap li{
   float: left;
-  /*width: 25%; js에서 처리*/
+  /*width: 100/갯수%; js에서 처리*/
   height: 100%;
 }
 .slide_wrap .img_list_01{
-  background-color: #ddd;
+  background-image: url('../../img/main/main_yg.jpg');
 }
 .slide_wrap .img_list_02{
-  background-color: #ccc;
+  background-image: url('../../img/main/main_boolatoon.jpg');
 }
 .slide_wrap .img_list_03{
-  background-color: #bbb;
-}
-.slide_wrap .img_list_04{
-  background-color: #aaa;
+  background-image: url('../../img/main/main_acg.jpg');
 }
 /* //slide_wrap */
 .list_contain{
@@ -401,10 +398,19 @@ body,html{width: 100%; height: 100%;}
   line-height: 36px;
   text-align: center;
 }
-.list_img{
+.thumb_img{
   width: 400px;
   height: 225px;
   background-color: #232323;
+}
+.thumb_yg{
+  background-image: url('../../img/main/thumb_yg.jpg');
+}
+.thumb_boolatoon{
+  background-image: url('../../img/main/thumb_boolatoon.png');
+}
+.thumb_acg{
+  background-image: url('../../img/main/thumb_acg.jpg');
 }
 /* //list_contain */
 .btn{
@@ -412,13 +418,42 @@ body,html{width: 100%; height: 100%;}
 }
 /* //btn */
 /* //container */
-/* #footBox{
-  position: fixed;
-  z-index: 9999;
+/* resume_modal */
+.reume_modal{
+  display: none;
+  position: absolute;
+  z-index: 99999;
   width: 100%;
-  height: 100px;
-  bottom: 0;
+  height: 100%;
+  top: 0;
   left: 0;
-  background-color: #ccc;
-} */
-/* //footBox */
+  background-color: rgba(255,255,255,0.8);
+  overflow: scroll;
+}
+.pdf_wrap{
+  width: 1000px;
+  height: auto;
+  padding: 90px 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+.close_btn{
+  position: absolute;
+  top: 90px;
+  left: 50%;
+  margin-left: 500px;
+  width: 50px;
+  height: 50px;
+}
+.close_btn button{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0);
+}
+.close_btn button i{
+  color: #232323;
+  font-size: 40px;
+}
+/* //resume_modal */
