--- a/css/src/project/project_output.css
+++ b/css/src/project/project_output.css
@@ -65,14 +65,16 @@ section{
 }
 .project_item{
   float: left;
+  position: relative;
   width: 265px;
   height: 150px;
   margin-right: 2px;
-  background-color: #ddd;
+  background-color: #fff;
   transition: all 500ms ease;
 }
 .project_item a{
   display: inline-block;
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -99,9 +101,6 @@ section{
 .item_move04{
   transform: translate3d(-240px, 0, 0);
 }
-.item_info{
-  display: none;
-}
 /* 줄 양끝 기준 잡기 위한 코드 */
 .item_eff01{
   transform: translate3d(120px, 0, 0) scale3d(1.9, 1.9, 1);
@@ -110,7 +109,72 @@ section{
   transform: translate3d(-120px, 0, 0) scale3d(1.9, 1.9, 1);
 }
 /* //줄 양끝 기준 잡기 위한 코드 */
+/* item 정보(hover) */
+.item_info{
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: -webkit-linear-gradient(rgba(255,255,255,0), rgba(0,0,0,0.9) 95%);
+  background-image: -moz-linear-gradient(rgba(255,255,255,0), rgba(0,0,0,0.9) 95%);
+  background-image: -o-linear-gradient(rgba(255,255,255,0), rgba(0,0,0,0.9) 95%);
+  background-image: -ms-linear-gradient(rgba(255,255,255,0), rgba(0,0,0,0.9) 95%);
+  background-image: linear-gradient(rgba(255,255,255,0), rgba(0,0,0,0.9) 95%);
+}
+.info_txtwrap{
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  top: 40%;
+  left: 0;
+  margin-left: 10px;
+}
+.item_info p{
+  color: #fff;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 18px;
+}
+.item_info .info_title{
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 22px;
+}
+.item_info p span{
+  color: #777;
+  font-size: 12px;
+}
+/* 링크 디자인 다듬고 
+  .item_link{
+  position: absolute;
+  width: 100%;
+  height: 26px;
+  bottom: 0;
+  left: 0;
+}
+.item_link a{
+  display: inline-block;
+  width: 110px;
+  height: 100%;
+  color: #fff;
+  background-color: #e6e6e6;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 3px;
+}
+.item_link a:nth-child(1){
+  float: left;
+  margin-left: 10px;
+}
+.item_link a:nth-child(2){
+  float: right;
+  margin-right: 10px;
+} 
+*/
+/* //item 정보(hover) */
 /* //item영역에 hover시 효과 관련된 css */
-
-
 /* //section */
