--- a/css/src/mypage.css
+++ b/css/src/mypage.css
@@ -12,15 +12,19 @@ body,html{width: 100%; height: 100%;}
 }
 #headBox h1{
   float: left;
-  width: 150px;
+  width: 50px;
   height: 50px;
-  background-color: #232323;
 }
 #headBox h1 a{
   display: inline-block;
   width: 100%;
   height: 100%;
+  background-repeat: no-repeat;
+  background-image: url('../../img/main/logo.png');
+  
 }
+/*이력서 보기 버튼을 메인페이지에서 output페이지로 옮김.*/
+/*
 #headBox button{
   float: right;
   width: 150px;
@@ -28,6 +32,7 @@ body,html{width: 100%; height: 100%;}
   background-color: #232323;
   color: #fff;
 }
+*/
 /* //headBox */
 /* 슬라이드에서 ul, li값을 css로 할 경우 clone값 때문에 흰 공백화면이 생김. 따라서 js로 처리. */
 #container{
@@ -162,7 +167,7 @@ body,html{width: 100%; height: 100%;}
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0.4);
 }
 .list_contain:hover{
   margin-right: 0;
@@ -228,7 +233,7 @@ body,html{width: 100%; height: 100%;}
 /* 글자 hover 효과 */
 /* project(output) */
 .list_wrap ul li a dl .output{
-  margin-left: 76px;
+  margin-left: 89px;
 }
 /* 글자별 가로 크기 */
 .list_wrap ul li a dl .output>div:nth-of-type(1){width: 31px;}
@@ -443,10 +448,13 @@ body,html{width: 100%; height: 100%;}
 .thumb_img{
   width: 400px;
   height: 225px;
-  background-color: #232323;
+  background-color: #141414;
 }
 .thumb_output{
-
+  background-position: 50% -20%;
+  background-size: 90%;
+  background-image: url('../../img/resume/resume.jpg');
+  
 }
 .thumb_yg{
   background-image: url('../../img/main/thumb_yg.jpg');
@@ -463,8 +471,9 @@ body,html{width: 100%; height: 100%;}
 }
 /* //btn */
 /* //container */
+/* 이력서 보기 버튼을 메인페이지에서 output페이지로 옮김. */
 /* resume_modal */
-.reume_modal{
+/* .reume_modal{
   display: none;
   position: absolute;
   z-index: 99999;
@@ -500,5 +509,5 @@ body,html{width: 100%; height: 100%;}
 .close_btn button i{
   color: #232323;
   font-size: 40px;
-}
+} */
 /* //resume_modal */
