--- a/css/src/project/project_boolatoon.css
+++ b/css/src/project/project_boolatoon.css
@@ -11,14 +11,15 @@ body,html{width: 100%; height: 100%; font-family: 'NanumBarunGothic', 'serif'}
 }
 #headBox h1{
   float: left;
-  width: 150px;
+  width: 50px;
   height: 50px;
-  background-color: #232323;
 }
 #headBox h1 a{
   display: inline-block;
   width: 100%;
   height: 100%;
+  background-repeat: no-repeat;
+  background-image: url('../../../img/main/logo.png');
 }
 #headBox .page_name{
   position: absolute;
