--- a/css/src/project/project_output.css
+++ b/css/src/project/project_output.css
@@ -11,23 +11,32 @@ body,html{width: 100%; height: 100%; font-family: 'NanumBarunGothic', 'serif'}
 }
 #headBox h1{
   float: left;
-  width: 150px;
+  width: 50px;
   height: 50px;
-  background-color: #232323;
 }
 #headBox h1 a{
   display: inline-block;
   width: 100%;
   height: 100%;
+  background-repeat: no-repeat;
+  background-image: url('../../../img/main/logo.png');
+}
+#headBox button{
+  float: right;
+  width: 150px;
+  height: 50px;
+  background-color: #141414;
+  color: #fff;
+  font-size: 13px;
 }
 #headBox .page_name{
   position: absolute;
-  width: 400px;
+  /*width: px;*/
   height: 50px;
   top: 0;
   left: 50%;
   margin-top: 20px;
-  margin-left: -500px;
+  margin-left: -81px;
   font-size: 18px;
   font-weight: bold;
   line-height: 50px;
@@ -36,18 +45,10 @@ body,html{width: 100%; height: 100%; font-family: 'NanumBarunGothic', 'serif'}
   background-color: #333;
   color: #fff;
 }
-#headBox button{
-  float: right;
-  width: 150px;
-  height: 50px;
-  background-color: #232323;
-  font-size: 13px;
-  color: #fff;
-}
 /* //headBox */
 section{
   width: 1600px;
-  height: 3000px;
+  height: 1000px;
   margin: 0 auto;
 }
 .project_wrap{
@@ -146,35 +147,42 @@ section{
   color: #777;
   font-size: 12px;
 }
-/* 링크 디자인 다듬고 
-  .item_link{
-  position: absolute;
-  width: 100%;
-  height: 26px;
-  bottom: 0;
-  left: 0;
-}
-.item_link a{
-  display: inline-block;
-  width: 110px;
-  height: 100%;
-  color: #fff;
-  background-color: #e6e6e6;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 30px;
-  text-align: center;
-  border-radius: 3px;
-}
-.item_link a:nth-child(1){
-  float: left;
-  margin-left: 10px;
-}
-.item_link a:nth-child(2){
-  float: right;
-  margin-right: 10px;
-} 
-*/
 /* //item 정보(hover) */
 /* //item영역에 hover시 효과 관련된 css */
+
+/* resume_modal */
+/* 이력서 일단 없앰
+.reume_modal{
+  display: none;
+  position: absolute;
+  z-index: 99999;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.pdf_wrap{
+  width: 1000px;
+  height: auto;
+  margin: 0 auto;
+}
+.close_btn{
+  position: absolute;
+  top: 90px;
+  left: 50%;
+  margin-left: 500px;
+  width: 50px;
+  height: 50px;
+}
+.close_btn button{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0);
+}
+.close_btn button i{
+  color: #232323;
+  font-size: 40px;
+}
+*/
+/* //resume_modal */
 /* //section */
