--- a/css/src/mypage.css
+++ b/css/src/mypage.css
@@ -451,9 +451,9 @@ body,html{width: 100%; height: 100%;}
   background-color: #141414;
 }
 .thumb_output{
-  background-position: 50% -20%;
-  background-size: 90%;
-  background-image: url('../../img/resume/resume.jpg');
+  background-position: center;
+  background-size: cover;
+  background-image: url('../../img/main/thumb_por.png');
   
 }
 .thumb_yg{
